# file-organizer

./: .gitignore  README.md  file_organizer.py  pyproject.toml  setup.py  setup.sh
file_organizer/: main.py
file_organizer_advanced.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
