[build-system]
requires = ["setuptools>=42", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = "file-organizer-advanced"
version = "1.0.2"
description = "A CLI tool to automatically organize files into categorized folders"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"  # SPDX format
authors = [
    { name = "Vick", email = "youremail@example.com" }
]
keywords = ["file", "organizer", "cli", "automation", "python", "folder", "sort"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.scripts]
file-organizer-advanced = "file_organizer.main:main"